// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonDialog control 1`] = `
<div
  className="ui-button-dialog buttonDialog normal test-class"
>
  <Button
    className=""
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    iconName="bomb"
    iconStyle=""
    id=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
        "fill": "white",
        "stroke": "black",
      }
    }
    testing={true}
    visible={true}
    width=""
    xcss={null}
  />
  <div
    className="ui-dialog-popup test-class-dialog buttonDialogPopup dialogBottom buttonDialogHide"
    onClick={[Function]}
  >
    <div
      className="buttonDialogContent"
    >
      <p>
        Dialog test
      </p>
    </div>
    <Triangle
      className="dialogTriangleBottom buttonDialogHide"
      contentEditable={false}
      direction="up"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={true}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "white",
          "stroke": "black",
        }
      }
      testing={true}
      visible={true}
      width=""
      xcss={null}
    />
  </div>
</div>
`;

exports[`Test creation of a ButtonDialog control on top 1`] = `
<div
  className="ui-button-dialog buttonDialog normal test-class"
>
  <Button
    className=""
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    iconName="bomb"
    iconStyle=""
    id=""
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
        "fill": "white",
        "stroke": "black",
      }
    }
    testing={true}
    visible={true}
    width=""
    xcss={null}
  />
  <div
    className="ui-dialog-popup test-class-dialog buttonDialogPopup dialogTop buttonDialogHide"
    onClick={[Function]}
  >
    <div
      className="buttonDialogContent"
    >
      <p>
        Dialog test
      </p>
    </div>
    <Triangle
      className="dialogTriangleTop buttonDialogHide"
      contentEditable={false}
      direction="down"
      disabled={false}
      focus={false}
      height=""
      id=""
      location="none"
      nobase={true}
      noedit={false}
      nohover={false}
      noripple={false}
      selected={false}
      sizing="normal"
      style={
        Object {
          "fill": "white",
          "stroke": "black",
        }
      }
      testing={true}
      visible={true}
      width=""
      xcss={null}
    />
  </div>
</div>
`;

exports[`Test making the ButtonDialog invisible 1`] = `
<ButtonDialog
  className=""
  contentEditable={false}
  dialogClasses={Array []}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  notriangle={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  triangleClasses={Array []}
  visible={false}
  width=""
  xcss={null}
>
  <div
    className="ui-button-dialog buttonDialog normal invisible"
  >
    <Button
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      iconName="bomb"
      iconStyle=""
      id=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
          "fill": "white",
          "stroke": "black",
        }
      }
      testing={true}
      visible={false}
      width=""
      xcss={null}
    >
      <div
        className="ui-button button ripple normal invisible"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
            "fill": "white",
            "stroke": "black",
          }
        }
      >
        <Icon
          className="icon"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          visible={true}
          width=""
          xcss={null}
        >
          <styled.i
            className="ui-icon fa fa-fw fa-bomb"
            sizing="normal"
            style={Object {}}
          >
            <i
              className="ui-icon fa fa-fw fa-bomb sc-bdVaJa ifzSmG"
              style={Object {}}
            />
          </styled.i>
        </Icon>
      </div>
    </Button>
    <div
      className="ui-dialog-popup buttonDialogPopup dialogBottom buttonDialogHide"
      onClick={[Function]}
    >
      <div
        className="buttonDialogContent"
      >
        <p>
          Dialog test
        </p>
      </div>
      <Triangle
        className="dialogTriangleBottom buttonDialogHide"
        contentEditable={false}
        direction="up"
        disabled={false}
        focus={false}
        height=""
        id=""
        location="none"
        nobase={true}
        noedit={false}
        nohover={false}
        noripple={false}
        selected={false}
        sizing="normal"
        style={
          Object {
            "fill": "white",
            "stroke": "black",
          }
        }
        testing={true}
        visible={true}
        width=""
        xcss={null}
      >
        <svg
          className="ui-triangle triangle normalBox triangleUp normal dialogTriangleBottom buttonDialogHide"
          preserveAspectRatio="xMidYMid meet"
          style={
            Object {
              "fill": "white",
              "stokeWidth": "2px",
              "stroke": "black",
            }
          }
          version="1.1"
          viewBox="0 0 40 40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="-3,35, 20,10 43,35"
            style={
              Object {
                "stroke": "none",
              }
            }
          />
          <polygon
            points="-3,35, 20,10 43,35, 20,10"
            style={
              Object {
                "strokeLinecap": "square",
                "strokeWidth": undefined,
              }
            }
          />
        </svg>
      </Triangle>
    </div>
  </div>
</ButtonDialog>
`;

exports[`Test retrieval of ButtonDialog props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "dialogClasses": Array [],
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "iconStyle": "",
  "id": "",
  "location": "bottom",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notriangle": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "inherit",
    "color": "inherit",
  },
  "testing": true,
  "triangleClasses": Array [],
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the disabling of the ButtonDialog control 1`] = `
<ButtonDialog
  className=""
  contentEditable={false}
  dialogClasses={Array []}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  iconName="bomb"
  iconStyle=""
  id=""
  location="bottom"
  noedit={false}
  nohover={false}
  noripple={false}
  notriangle={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  triangleClasses={Array []}
  visible={true}
  width=""
  xcss={null}
>
  <div
    className="ui-button-dialog buttonDialog normal disabled nohover"
  >
    <Button
      className=""
      contentEditable={false}
      direction="right"
      disabled={true}
      focus={false}
      height=""
      iconName="bomb"
      iconStyle=""
      id=""
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
          "fill": "white",
          "stroke": "black",
        }
      }
      testing={true}
      visible={true}
      width=""
      xcss={null}
    >
      <div
        className="ui-button button normal disabled nohover"
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
            "fill": "white",
            "stroke": "black",
          }
        }
      >
        <Icon
          className="icon"
          contentEditable={false}
          direction="right"
          disabled={false}
          focus={false}
          height=""
          iconName="bomb"
          id=""
          imageFile=""
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          selected={false}
          sizing="normal"
          style={Object {}}
          testing={true}
          visible={true}
          width=""
          xcss={null}
        >
          <styled.i
            className="ui-icon fa fa-fw fa-bomb"
            sizing="normal"
            style={Object {}}
          >
            <i
              className="ui-icon fa fa-fw fa-bomb sc-bdVaJa ifzSmG"
              style={Object {}}
            />
          </styled.i>
        </Icon>
      </div>
    </Button>
    <div
      className="ui-dialog-popup buttonDialogPopup dialogBottom buttonDialogHide"
      onClick={[Function]}
    >
      <div
        className="buttonDialogContent"
      >
        <p>
          Dialog test
        </p>
      </div>
      <Triangle
        className="dialogTriangleBottom buttonDialogHide"
        contentEditable={false}
        direction="up"
        disabled={false}
        focus={false}
        height=""
        id=""
        location="none"
        nobase={true}
        noedit={false}
        nohover={false}
        noripple={false}
        selected={false}
        sizing="normal"
        style={
          Object {
            "fill": "white",
            "stroke": "black",
          }
        }
        testing={true}
        visible={true}
        width=""
        xcss={null}
      >
        <svg
          className="ui-triangle triangle normalBox triangleUp normal dialogTriangleBottom buttonDialogHide"
          preserveAspectRatio="xMidYMid meet"
          style={
            Object {
              "fill": "white",
              "stokeWidth": "2px",
              "stroke": "black",
            }
          }
          version="1.1"
          viewBox="0 0 40 40"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="-3,35, 20,10 43,35"
            style={
              Object {
                "stroke": "none",
              }
            }
          />
          <polygon
            points="-3,35, 20,10 43,35, 20,10"
            style={
              Object {
                "strokeLinecap": "square",
                "strokeWidth": undefined,
              }
            }
          />
        </svg>
      </Triangle>
    </div>
  </div>
</ButtonDialog>
`;
